# mynode

./: .gitignore  Dockerfile  LICENSE  README.md  __init__.py  docker-compose.yml  entrypoint.sh  mongo_queries.txt  requirements.txt  server.py  settings.py  setup.py  test.py
backend/: Dockerfile  __init__.py  app.py  block_loop.py  entrypoint.sh  requirements.txt  server.py  test_address_from_script.py
backend/models/: __init__.py  transaction.py
backend/models/block/: __init__.py
backend/models/transaction/: __init__.py  model.py  utils.py
backend/scripts/: __init__.py  groups.py  mynode.py
backend/scripts/docker_cmds/: __init__.py
backend/scripts/index/: __init__.py  cmds.py  group.py
backend/wallet/: NOTES.txt  README.md  add.csv  check-balance.py  requirement-test.txt  requirement.txt  reserve-wallet.py  screen_test.py  screens_ex.py  setup.cfg  setup.py  swallet.py
backend/wallet/core/: __init__.py
backend/wallet/core/utils/: colors.py  encoding.py  hash.py  jprint.py  wallet.py
backend/wallet/templates/: main.kv
backend/wallet/wallet/: __init__.py  exceptions.py  test_client.py  test_utils.py  test_wallet.py  wallet.py
frontend/: Dockerfile  entrypoint.sh  package-lock.json  package.json  vue.config.js
frontend/src/: App.vue
frontend/src/components/: Address.vue  Explorer.vue  Header.vue  Home.vue  Transaction.vue  TransactionPanel.vue  indexing_errors.txt
frontend/src/router/: index.js
scripts/: __init__.py  idx_txn_add.py  mynode  mynode.py
scripts/docker_cmds/: __init__.py
scripts/index/: __init__.py
(+2 files in other folders)
