[metadata]
# replace with your username:
name = wallet
version = 0.0.1
url = https://github.com/gnulnx/wallet
author = John Furr
author_email = john.furr@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6

[options.entry_points]
my.plugins =
    create_private_key = test